# rpmcmp

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  rpmcmp.hpp
tests/: CMakeLists.txt  rpmcmp_tests.cpp
